--- a/lifesyncc-mobile/eas.json
+++ b/lifesyncc-mobile/eas.json
@@ -18,7 +18,8 @@
     "preview": {
       "distribution": "internal",
       "android": {
-        "buildType": "apk"
+        "buildType": "apk",
+        "credentialsSource": "local"
       }
     },
     "production": {}
