--- a/lifesyncc-mobile/package.json
+++ b/lifesyncc-mobile/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-community/datetimepicker": "^8.4.2",
     "@react-navigation/bottom-tabs": "^7.3.17",
     "@react-navigation/native": "^7.1.13",
     "@react-navigation/stack": "^7.3.6",
     "expo": "~53.0.12",
+    "expo-build-properties": "~0.14.6",
+    "expo-dev-client": "~5.2.1",
     "expo-secure-store": "^14.2.3",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
@@ -21,9 +24,7 @@
     "react-native-gesture-handler": "~2.24.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "^4.11.1",
-    "expo-dev-client": "~5.2.1",
-    "expo-build-properties": "~0.14.6"
+    "react-native-screens": "^4.11.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
