--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,9 @@
   "functions": {
     "api/auth/*.js": {
       "maxDuration": 10
+    },
+    "api/schedule/*.js": {
+      "maxDuration": 10
     }
   },
   "headers": [
