--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,6 @@ REACT_APP_API_URL=http://localhost:5000
 # MONGODB_URI=mongodb://localhost:27017/lifesyncc
 # JWT_SECRET=your-secret-key-change-this-in-production
 # PORT=5000
+
+# Claude AI API Key (for goal categorization)
+# ANTHROPIC_API_KEY=your-claude-api-key-here
