Add SMS OTP login feature with Twilio integration
- Create send-otp and verify-otp API endpoints
- Add OTPVerification model with expiry and rate limiting
- Update User model to support phone authentication
- Create phone login and OTP verification screens
- Add phone login option to existing login screen
- Implement secure OTP flow with attempt tracking
- Add Twilio SDK integration for SMS delivery

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,8 @@ REACT_APP_API_URL=http://localhost:5000
 
 # Claude AI API Key (for goal categorization)
 # ANTHROPIC_API_KEY=your-claude-api-key-here
+
+# Twilio Configuration (for SMS OTP)
+# TWILIO_ACCOUNT_SID=your-twilio-account-sid
+# TWILIO_AUTH_TOKEN=your-twilio-auth-token
+# TWILIO_PHONE_NUMBER=your-twilio-phone-number
