--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.2",
     "react-scripts": "5.0.1",
+    "twilio": "^5.7.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
