--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,8 @@ yarn-error.log*
 backend/.env
 .vercel
 .env*.local
+
+lifesyncc-mobile/app/config/environment.js
+imgss/
+lifesyncc-mobile/app/screens/main/ScheduleScreen.tsx.backup
+lifesyncc-mobile/app/screens/main/TestScreen.tsx
