add moment to the dependencies in your root package.json

--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,21 @@
 {
+  "builds": [
+    {
+      "src": "package.json",
+      "use": "@vercel/static-build",
+      "config": { "outputDirectory": "build" }
+    }
+  ],
+  "routes": [
+    {
+      "src": "/api/(.*)",
+      "dest": "api/$1"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/build/$1"
+    }
+  ],
   "functions": {
     "api/auth/*.js": {
       "maxDuration": 10
