--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-scripts": "5.0.1",
     "twilio": "^5.7.1",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "moment": "^2.30.1"
   },
   "scripts": {
     "start": "react-scripts start",
