Fix vercel.json: Change 'src' to 'source' in rewrites section

--- a/vercel.json
+++ b/vercel.json
@@ -22,7 +22,7 @@
       "destination": "/api/$1"
     },
     {
-      "src": "/(.*)",
+      "source": "/(.*)",
       "destination": "/build/$1"
     }
   ],
