Fix Vercel API routing configuration
- Simplified vercel.json to use only rewrites
- Fixed API endpoint routing to properly handle /api/* routes
- Changed fallback destination from /build/ to /index.html for SPA routing

--- a/vercel.json
+++ b/vercel.json
@@ -1,21 +1,4 @@
 {
-  "builds": [
-    {
-      "src": "package.json",
-      "use": "@vercel/static-build",
-      "config": {
-        "outputDirectory": "build",
-        "buildCommand": "npm run build"
-      }
-    },
-    {
-      "src": "api/**/*.js",
-      "use": "@vercel/node",
-      "config": {
-        "maxDuration": 10
-      }
-    }
-  ],
   "rewrites": [
     {
       "source": "/api/(.*)",
@@ -23,7 +6,7 @@
     },
     {
       "source": "/(.*)",
-      "destination": "/build/$1"
+      "destination": "/index.html"
     }
   ],
   "headers": [
