--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.518.0",
+    "moment": "^2.30.1",
     "mongoose": "^8.16.0",
     "node-fetch": "^2.7.0",
     "react": "^19.1.0",
@@ -26,8 +27,7 @@
     "react-scripts": "5.0.1",
     "twilio": "^5.7.1",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4",
-    "moment": "^2.30.1"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -57,6 +57,7 @@
     ]
   },
   "devDependencies": {
+    "axios": "^1.10.0",
     "concurrently": "^8.2.2",
     "tailwindcss": "^3.4.0"
   }
